--- a/requirements.txt
+++ b/requirements.txt
@@ -71,6 +71,7 @@ pytest-runner==4.4
 pytest-sugar==0.9.2
 python-dateutil==2.8.0
 pytz==2019.1
+pywin32==223
 PyYAML==5.1.1
 queuelib==1.5.0
 requests==2.21.0
@@ -83,7 +84,7 @@ six==1.12.0
 soupsieve==1.9.1
 termcolor==1.1.0
 traitlets==4.3.2
-Twisted==19.2.0
+Twisted==19.2.1
 urllib3==1.24.3
 w3lib==1.20.0
 waitress==1.3.0
