--- a/requirements.txt
+++ b/requirements.txt
@@ -1,96 +1,22 @@
-appdirs==1.4.3
-asn1crypto==0.24.0
-astroid==2.1.0
-atomicwrites==1.3.0
-attrs==19.1.0
-Automat==0.7.0
-autopep8==1.4.3
-bcrypt==3.1.6
-beautifulsoup4==4.7.1
-certifi==2019.6.16
-cffi==1.12.3
-chardet==3.0.4
 Click==7.0
-colorama==0.4.1
-constantly==15.1.0
-cryptography==2.7
-cssselect==1.0.3
-cycler==0.10.0
-dash==1.0.1
-dash-bootstrap-components==0.6.3
-dash-core-components==1.0.0
-dash-cytoscape==0.1.1
-dash-daq==0.1.5
-dash-html-components==1.0.0
-dash-renderer==1.0.0
-dash-table==4.0.1
-decorator==4.4.0
-Flask==1.0.3
+dash==1.6.1
+dash-bootstrap-components==0.7.2
+dash-core-components==1.5.1
+dash-cytoscape==0.0.5
+dash-daq==0.3.1
+dash-html-components==1.0.2
+dash-renderer==1.2.1
+dash-table==4.5.1
+decorator==4.4.1
+Flask==1.1.1
 Flask-Compress==1.4.0
-gunicorn==19.9.0
-hyperlink==19.0.0
-idna==2.8
-importlib-metadata==0.17
-incremental==17.5.0
-ipython-genutils==0.2.0
-isort==4.3.4
+future==0.18.2
 itsdangerous==1.1.0
-Jinja2==2.10.1
+Jinja2==2.10.3
 jsonlines==1.2.0
-jsonschema==3.0.1
-jupyter-core==4.5.0
-kiwisolver==1.1.0
-lazy-object-proxy==1.3.1
-lxml==4.3.4
 MarkupSafe==1.1.1
-matplotlib==3.0.3
-mccabe==0.6.1
-more-itertools==7.0.0
-nbformat==4.4.0
-networkx==2.3
-numpy==1.16.3
-packaging==19.0
-parsel==1.5.1
-percy==2.0.2
-plotly==3.10.0
-pluggy==0.12.0
-py==1.8.0
-pyasn1==0.4.5
-pyasn1-modules==0.2.4
-pycodestyle==2.4.0
-pycparser==2.19
-PyDispatcher==2.0.5
-PyHamcrest==1.9.0
-pylint==2.2.2
-pyOpenSSL==19.0.0
-pyparsing==2.4.0
-pyrsistent==0.15.2
-pytest==5.0.0
-pytest-mock==1.10.4
-pytest-runner==4.4
-pytest-sugar==0.9.2
-python-dateutil==2.8.0
-pytz==2019.1
-pywin32==223
-PyYAML==5.1.1
-queuelib==1.5.0
-requests==2.21.0
+networkx==2.4
+plotly==4.3.0
 retrying==1.3.3
-rope==0.14.0
-Scrapy==1.6.0
-selenium==3.141.0
-service-identity==18.1.0
-six==1.12.0
-soupsieve==1.9.1
-termcolor==1.1.0
-traitlets==4.3.2
-Twisted==19.2.1
-urllib3==1.24.3
-w3lib==1.20.0
-waitress==1.3.0
-wcwidth==0.1.7
-Werkzeug==0.15.4
-wincertstore==0.2
-wrapt==1.10.11
-zipp==0.5.1
-zope.interface==4.6.0
+six==1.13.0
+Werkzeug==0.16.0
